<resources>
    <string name="app_name">FitPomodoro</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="pomodoro">Pomodoro Timer</string>
    <string name="settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="exercises">Exercises</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="history">History</string>
    <string name="exercise_group">Exercise group</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_new_category">Enter new category:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="browse">Browse</string>
    <string name="enter_exercise">Enter exercise</string>
    <string name="time">Time</string>
    <string name="reps">Reps</string>
    <string name="description">Description:</string>
    <string name="exercise_type">Exercise type</string>
    <string name="enter_description">Enter description</string>
    <string name="statistics">Statistics</string>
    <string name="about">About</string>
    <string name="legal">Legal</string>
    <string name="my_app_license_header">FitPomodoro v1.0.0 [ beta ]</string>
    <string name="my_app_license">© 2017 DMieSoft \n Third-party licenses:</string>
    <string name="delete">Delete</string>
    <string name="could_not_load_img">There was an error. Please clear app from memory and start again.</string>
    <string name="done">Done</string>
    <string name="random_exercise">Random exercise</string>
    <string name="rand_sequence">Random squence</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="menu_edit_name">Edit name</string>
    <string name="menu_edit_desc">Edit description</string>
</resources>
