<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_timer"
            android:icon="@drawable/ic_timer_24dp"
            android:title="@string/pomodoro"/>
        <item
            android:id="@+id/nav_exercise_group"
            android:icon="@drawable/ic_drawer_biceps_24dp"
            android:title="@string/exercises"/>
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_statistics_24dp"
            android:title="@string/statistics"/>
    </group>

    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:checkable="false"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_about"
                android:checkable="false"
                android:title="@string/about"
                android:icon="@drawable/ic_about_24dp"/>

        </menu>
    </item>

</menu>
