<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Choose logo: "
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginRight="20dp" />

        <ImageButton
            android:id="@+id/btnImage"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_image" />

    </LinearLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radioGroup"
        android:layout_height="wrap_content">

        <RadioButton
            android:text="@string/reps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:checked="true"
            android:layout_marginEnd="10dp"
            android:id="@+id/radioReps" />

        <RadioButton
            android:text="@string/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioTime" />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_exercise"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editExerciseText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords|textFilter" />

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btnSave"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

    </LinearLayout>

</LinearLayout>