<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_about"
    android:padding="10dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/aboutLayout">

        <TextView
            android:layout_width="wrap_content"
            android:textSize="@dimen/header_text_size"
            android:textStyle="bold"
            android:text="@string/legal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_app_license_header"
            android:textSize="@dimen/header_text_size"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/license_text_size"
            android:text="@string/my_app_license"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

</ScrollView>